--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link href="noise.css" media="screen" rel="stylesheet" type="text/css">
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="noise.js"></script>
+    <!-- <script type="text/javascript" src="noise.js"></script> -->
+    <script type="text/javascript" src="alternate-noise.js"></script>
   </head>
   <body>
     <div id="audio_embeds">
@@ -46,7 +47,7 @@
       </audio>
     </div>
     <div class="instrument">
-      <button class="note c">c</button>        
+      <button class="note c">c</button>
       <button class="note d">d</button>
       <button class="note e">e</button>
       <button class="note f">f</button>
